# micro-esp32

./: .TODO  .gitignore  404.html  LICENSE.md  Readme.md  index.html  init_env.sh  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: action.yml
00_introduccion/: index.html
01_estructura/: index.html
02_interfaz_ide/: index.html
03_io/: index.html
04_io_ex/: index.html
05_adc_pwm/: index.html
06_analog_ex/: index.html
07_teoria_sensores/: index.html
08_sensores/: index.html
09_screen/: index.html
100_tools_port/: index.html
10_mini_projects/: index.html
10_sensores_ex/: index.html
Capitulo 1/: index.html
Capitulo 1/01_variables/: index.html
Capitulo 1/02_tipos_datos/: index.html
Capitulo 1/03_declaracion_de_variables/: index.html
Capitulo 1/04_estructura_archivo/: index.html
Capitulo 1/05_salida_datos/: index.html
Capitulo 1/06_operaciones_aritmeticas/: index.html
Capitulo 1/07_entrada_datos_scanf/: index.html
Capitulo 2/: index.html
Referencias/: index.html
base_esp32_code/: ADC.ino  inputs.ino
capitulo2/: index.html
docs/: 00_introduccion.md  01_estructura.md  02_interfaz_ide.md  03_io.md  04_io_ex.md  05_adc_pwm.md  06_analog_ex.md  08_sensores.md  09_screen.md  100_tools_port.md  10_mini_projects.md  10_sensores_ex.md  Referencias.md  index.md  instalacion_manual.md  lista_de_materiales.md  simuladores.md
instalacion_manual/: index.html
lista_de_materiales/: index.html
search/: search_index.json
simuladores/: index.html
site/: 404.html  index.html  sitemap.xml  tags.html
(+153 files in other folders)
