[tool.poetry]
name = "micro-esp32"
version = "0.1.0"
description = "documentacion del uso del ESP32 con Arduino"
authors = ["jalmx <jalm_x@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.5.11"
mkdocs-material-extensions = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
